@@ -122,3 +122,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20031019 Transparent reading of gzipped files.
 20031019 libspectrum.c: better chance of compiling if zlib not available.
 20031020 Transparent reading of bzipped files.
+20031030 zlib.c: use the 'normal' zlib interface to decompress gzipped
+	 files rather than the gz* functions.
